iidy/tests/snapshots/error_examples_snapshots__auto_discovered_example_templates_errors_parsing_eq_not_sequence.snap
---
source: tests/error_examples_snapshots.rs
expression: "format!(\"{}\", e)"
---
Tag error: must be a sequence with exactly 2 elements @ example-templates/errors/parsing-eq-not-sequence.yaml:2:7 (errno: IY4002)
  -> use format: [value1, value2]

   1 | # !$eq with string instead of sequence
   2 | test: !$eq "invalid"

   example:
   !$eq ["{{env}}", "production"]
   For more info, run: iidy explain IY4002
