iidy/tests/snapshots/error_examples_snapshots__auto_discovered_example_templates_errors_parsing_groupby_not_mapping.snap
---
source: tests/error_examples_snapshots.rs
expression: "format!(\"{}\", e)"
---
Tag error: must be a mapping with 'items' and 'key' fields @ example-templates/errors/parsing-groupby-not-mapping.yaml:2:7 (errno: ERR_4002)
  -> use format: {items: array, key: grouping_key, var: item_name, template: result_template}

   1 | # !$groupBy with string instead of mapping
   2 | test: !$groupBy "invalid"

   example:
   !$groupBy
     items: [{name: "a", type: "x"}, {name: "b", type: "x"}]
     key: type
     var: group
     template: "{{group.key}}: {{#each group.items}}{{name}}{{/each}}"
   For more info, run: iidy explain ERR_4002
