iidy/tests/snapshots/error_examples_snapshots__auto_discovered_example_templates_errors_tag_map_uses_transform.snap
---
source: tests/error_examples_snapshots.rs
expression: "format!(\"{}\", e)"
---
Tag error: 'template' missing in !$map tag @ example-templates/errors/tag-map-uses-transform.yaml:5:10 (errno: IY4002)
  -> add 'template' field to !$map tag

   4 | 
   5 | configs: !$map
   6 |   items: !$ services

   example:
   !$map
     items: [1, 2, 3]
     template: "{{item}}"
   For more info, run: iidy explain IY4002
